<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="44dp"
                android:src="@drawable/drxx18" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_gray_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_gray_24dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/calibri"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="Facebook" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#80D1D1D1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/calibri"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text="Not registered yet?"
                        android:textAlignment="textEnd"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sign_up_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:fontFamily="@font/calibri"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:text=" Sign up now"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>